# gapic-generator

./: .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  WORKSPACE  artman_config.yaml  build.gradle  dependencies.properties  gapic_generator.bzl  gapic_smoketest.py  generate  generate_clients.py  license-header-javadoc.txt  renovate.json  repositories.bzl  repository_rules.bzl  settings.gradle  tmp.txt  versions.txt
.circleci/: config.yml  discogapic_compute_build.gradle  gapic-generator-it-test.json.enc
.github/: CODEOWNERS  release-please.yml  snippet-bot.yml  sync-repo-settings.yaml
.github/workflows/: codeql-analysis.yml
benchmark/: .gitignore  README.md
benchmark/clients/go/: local.go
benchmark/clients/java/pubsub/: pom.xml
benchmark/clients/php/: composer.json  local.php
benchmark/server/: server.go
buildSrc/src/main/groovy/: DependencyResolver.groovy  ExecutableLocator.groovy  Symlinks.groovy
fx/: .gitignore  README.md  build.gradle
gapic/: README.md  gapic.bzl
gapic/java/: BUILD.bazel  java_gapic.bzl  java_gapic_pkg.bzl  java_gapic_pkg_deps_resolution.bzl  java_gapic_pkg_repos.bzl
gapic/java/resources/gradle/: client.gradle.tmpl  grpc.gradle.tmpl  proto.gradle.tmpl  settings.gradle.tmpl
google/cloud/: common_resources.proto
gradle-plugin/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
rules_gapic/: README.md  gapic.bzl  gapic_pkg.bzl
rules_gapic/bazel/: BUILD.bazel
rules_gapic/bazel/src/main/java/com/google/api/codegen/bazel/: ApiDir.java  ApiVersionedDir.java  ApisVisitor.java  ArgsParser.java  BUILD.bazel.gapic_api.mustache  BUILD.bazel.raw_api.mustache  BazelBuildFileTemplate.java  BazelBuildFileView.java  BuildFileGenerator.java  Buildozer.java
rules_gapic/bazel/src/test/data/buildozer/: BUILD.bazel.template
rules_gapic/bazel/src/test/java/com/google/api/codegen/bazel/: BuildFileGeneratorTest.java
rules_gapic/csharp/: csharp_gapic.bzl  csharp_gapic_pkg.bzl
rules_gapic/go/: go_gapic.bzl  go_gapic_pkg.bzl  go_gapic_repos.bzl  go_gapic_repositories.bzl
rules_gapic/java/: java_gapic.bzl  java_gapic_pkg.bzl  java_gapic_pkg_deps_resolution.bzl  java_gapic_pkg_repos.bzl  java_gapic_repositories.bzl
rules_gapic/java/resources/gradle/: client.gradle.tmpl  client_disco.gradle.tmpl  grpc.gradle.tmpl  proto.gradle.tmpl  settings.gradle.tmpl
rules_gapic/java/resources/gradle/gradle/wrapper/: gradle-wrapper.properties
rules_gapic/nodejs/: nodejs_gapic.bzl  nodejs_gapic_pkg.bzl
rules_gapic/php/: php_gapic.bzl  php_gapic_pkg.bzl  php_gapic_repositories.bzl
rules_gapic/php/resources/: README.md
rules_gapic/py/: py_gapic.bzl
rules_gapic/python/: py_gapic.bzl  py_gapic_pkg.bzl  py_gapic_repositories.bzl
rules_gapic/ruby/: ruby_gapic.bzl  ruby_gapic_pkg.bzl
scripts/: enroll.sh  g3diff.sh
showcase/go/: showcase_integration_test.go
showcase/java/: .gitignore  build.gradle  settings.gradle
showcase/java/gradle/wrapper/: gradle-wrapper.properties
showcase/nodejs/: index.js  karma.conf.js  package.json  showcase-integration-test.js  webpack.config.js
showcase/php/: composer.json  phpunit.xml.dist
showcase/php/tests/: ShowcaseIntegrationTest.php  ShowcaseIntegrationTests.php
showcase/python/: .gitignore  nox.py
showcase/python/tests/: showcase_integration_test.py
showcase/ruby/: Gemfile  showcase_integration_test.rb
smoketests/: gapic_smoketest.py
smoketests/tests/: test_java_logging.py  test_java_pubsub.py  test_java_speech.py
src/main/java/com/google/api/codegen/: ApiConfig.java  ApiModel.java  ApiaryConfig.java  ArtifactType.java  BundlingConfig.java  CodeGenerator.java  CodeGeneratorApi.java  CodeGeneratorTool.java  CodeGeneratorUtil.java  CodePathMapper.java  CodegenContext.java  CodegenSetup.java  CollectionConfig.java  CommentPatterns.java  DevelopmentStatus.java  DiscoGapicGeneratorApi.java  DiscoGapicGeneratorTool.java  DiscoveryContext.java  DiscoveryFragmentGenerator.java  DiscoveryFragmentGeneratorApi.java  DiscoveryFragmentGeneratorBatch.java  DiscoveryFragmentGeneratorTool.java  DiscoveryImporter.java  DiscoveryLanguageProvider.java  DiscoveryProvider.java  DocConfig.java  DocumentGenerator.java  DocumentSymbolTableBuilder.java  FlatteningConfig.java  FragmentGenerator.java  GapicContext.java  GapicLanguageProvider.java  GapicProvider.java  GeneratedResult.java  GeneratorBuilderUtil.java  GeneratorMain.java  GeneratorVersionProvider.java  Inflector.java  InputElementView.java  InterfaceConfig.java  (+22 more)
src/main/proto/com/google/api/codegen/: config.proto  config_v2.proto  discovery_batch.proto
src/main/resources/com/google/api/codegen/: LICENSE.snip  common.snip  copyright-google.txt  license-header-apache-2.0.txt  license-header-bsd-3-clause.txt  readme.snip  readme_rst.snip
src/test/java/com/google/api/codegen/: CSharpCodeGeneratorTest.java  CSharpDiscoveryFragmentGeneratorTest.java  ClientConfigGeneratorTest.java  CodeGeneratorApiTest.java  CodeGeneratorTestBase.java  CodegenTestUtil.java  CollectionPatternTest.java  ConfigGenerationTest.java  DiscoConfigBaselineTestCase.java  DiscoConfigGenerationTest.java  DiscoGapicTestBase.java  DiscoveryFragmentGeneratorTestBase.java  DiscoveryGeneratorTestBase.java  DiscoveryImporterTest.java  FragmentGeneratorTestBase.java  GapicCodeGeneratorAnnotationsTest.java  GapicCodeGeneratorTest.java  GapicCodegenTestConfig.java  GapicTestBase.java  GapicTestBase2.java  GapicTestConfig.java  GapicTestModelGenerator.java  GeneratedResultComparator.java  GeneratorTestBase.java  GoCodeGeneratorTest.java  GoDiscoveryFragmentGeneratorTest.java  InflectorTest.java  JSDiscoveryFragmentGeneratorTest.java  JavaCodeGeneratorTest.java  JavaDirectCodeGeneratorTest.java  (+22 more)
testutils/: README.md  check-baselines.sh  check-calling-form-in-baseline.go  no-unhandled.sh  unused-namer.sh  unused-views.sh
testutils/check-calling-form-in-baseline/: main.go  main_test.go
testutils/check-lang-uses-form/: main.go  main_test.go
tmp/: sample.py
tmp/googleapiclient/: discovery.py
vgen/: build.gradle
(+2959 files in other folders)
